# discord-bot-cli

./: .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.md  README.md  culture.yaml  pyproject.toml  sonar-project.properties  the_convertible_coder.md
.claude/: skills.local.yaml.example
.claude/skills/ask-colleague/: SKILL.md
.claude/skills/cicd/: SKILL.md
.claude/skills/communicate/: SKILL.md
.claude/skills/outsource/scripts/: outsource.sh
.claude/skills/recall/: SKILL.md
.claude/skills/remember/: SKILL.md
.devague/: current
.devague/frames/: discord-bot-cli-ships-a-set-of-one-shot-discord-to.json
.devague/plans/: discord-bot-cli-ships-a-set-of-one-shot-discord-to.json
.github/workflows/: live-tests.yml  publish.yml  tests.yml
discord_bot_cli/: __init__.py  __main__.py  discord_client.py
discord_bot_cli/cli/: __init__.py  _errors.py  _output.py
discord_bot_cli/cli/_commands/: _discord_common.py  channel.py  cli.py  doctor.py  explain.py  learn.py  message.py  overview.py  thread.py  user.py  whoami.py
discord_bot_cli/explain/: __init__.py  catalog.py
docs/: skill-sources.md
docs/plans/: 2026-06-18-discord-bot-cli-ships-a-set-of-one-shot-discord-to.md
docs/specs/: 2026-06-18-discord-bot-cli-ships-a-set-of-one-shot-discord-to.md
tests/: conftest.py  test_cli.py  test_cli_introspection.py  test_discord_channel.py  test_discord_client.py  test_discord_integration.py  test_discord_message.py  test_discord_thread.py  test_discord_user.py  test_live_discord.py  test_no_runtime_deps.py
