[project]
name = "discord-bot-cli"
version = "0.2.0"
description = "Agent + CLI that gives an agent Discord access via a bot."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "AgentCulture"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
]
dependencies = []

# Runtime stays dependency-free (see CLAUDE.md "Hard constraints"). The Discord
# verbs need discord.py, so it lives here as an OPTIONAL extra, lazy-imported
# inside the command handlers — mirroring ec2-cli's boto3 and reterminal's
# Pillow. A verb run without the extra returns EXIT_ENV_ERROR(2) with an install
# hint, never an ImportError traceback.
[project.optional-dependencies]
discord = ["discord.py>=2.4"]

[project.urls]
Homepage = "https://github.com/agentculture/discord-bot-cli"
Issues = "https://github.com/agentculture/discord-bot-cli/issues"

[project.scripts]
discord = "discord_bot_cli.cli:main"
discord-bot-cli = "discord_bot_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["discord_bot_cli"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.1",
    "bandit>=1.7.5",
    "flake8>=6.1",
    "isort>=5.12.0",
    "black>=23.7.0",
    "teken>=0.8",
    # The Discord extra, so CI exercises the verb code paths (the tests stub the
    # transport seam, but the modules + static guards still import-scan).
    "discord.py>=2.4",
]

[tool.coverage.run]
source = ["discord_bot_cli"]
omit = ["discord_bot_cli/__pycache__/*"]
# Emit repo-relative paths in coverage.xml so SonarCloud maps them to
# sonar.sources=discord_bot_cli (absolute/.venv paths fail to map → empty coverage).
relative_files = true

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["discord_bot_cli"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.bandit]
exclude_dirs = ["tests"]
# B105: the only "hardcoded password" hit is the constant "DISCORD_BOT_TOKEN" —
# the NAME of the env var we read the token from, never a secret value.
skips = ["B101", "B404", "B603", "B105"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
